--- a/Number.html
+++ b/Number.html
@@ -17,7 +17,7 @@
     <p>
       +8 790 293 13 16
     </p>
-    <a href=cauT.html><p> Вернуться на главную </p></a>
+    <a href=index.html><p> Вернуться на главную </p></a>
     <a href=CaUT_2.html><p>посмотреть на карте</p></a>
     <table cellspacing = 20>
       <tr>
